added a layout template file

--- a/views/app.erb
+++ b/views/app.erb
@@ -24,8 +24,6 @@
   </head>
 
   <body>
-    <div class="container">
-      <p><%= @compliment %></p>
-    </div>
+    <%= yield %>
   </body>
 </html>
