--- a/views/app.erb
+++ b/views/app.erb
@@ -12,7 +12,7 @@
         font-size: 3em;
         line-height: 1em;
         position: absolute;
-        top: 40%;
+        top: 30%;
         width: 100%;
       }
 
@@ -20,10 +20,23 @@
         width: 50%;
         margin: 0 auto;
       }
+
+      .intro {
+        font-size: 0.8em;
+        text-align: center;
+        font-weight: normal;
+      }
+
+      .result {
+        text-align: center;
+        font-weight: bold;
+      }
     </style>
   </head>
 
   <body>
-    <%= yield %>
+    <div class="container">
+      <%= yield %>
+    </div>
   </body>
 </html>
