--- a/views/app.erb
+++ b/views/app.erb
@@ -6,23 +6,31 @@
       html, body {
         height: 100%;
         position: relative;
+        margin: 0;
       }
       .container {
         font-family: sans-serif;
         font-size: 3em;
         line-height: 1em;
-        position: absolute;
-        top: 30%;
         width: 100%;
+        text-align: center;
+        padding: 2em 0 0;
       }
 
-      .container > p {
+      .container > p, .container > form {
         width: 50%;
         margin: 0 auto;
       }
 
+      .words {
+        width: 100%;
+        font-family: monospace;
+        font-size: 1em;
+        padding: 16px;
+      }
+
       .intro {
-        font-size: 0.8em;
+        font-size: 0.6em;
         text-align: center;
         font-weight: normal;
       }
@@ -31,6 +39,20 @@
         text-align: center;
         font-weight: bold;
       }
+
+      .back {
+        font-size: 0.3em;
+        margin-top: 24px;
+        text-align: center;
+        display: block;
+      }
+
+      .piggy {
+        border-radius: 50%;
+        width: 100px;
+        height: 100px;
+      }
+
     </style>
   </head>
 
