--- a/views/piglatinized.erb
+++ b/views/piglatinized.erb
@@ -1,2 +1,4 @@
 <h1 class="intro">'<%= @word %>' in piglatin is</h1>
 <p class="result"><%= @result %></p>
+
+<a href="/piglatin" class="back">...back to Little Piggie</a>
